bubble chart finished

--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -24,9 +24,9 @@
         <div class="well">
           <h5>Test Subject ID No.:</h5>
           <select id="selDataset" onchange="optionChanged(this.value)">
-            <!-- <option value="dataset1">United States</option>
-            <option value="dataset2">Canada</option>
-            <option value="dataset2">UK</option> -->
+            <option value="dataset1">Select a sample!</option>
+            <!-- <option value="dataset2">Canada</option>
+            <option value="dataset2">UK</option> --> -->
         </select>
         </div>
         <div class="panel panel-primary">
